# ollama-shell-client

./: Cargo.toml  README.md
python/: app.py  pyproject.toml  virtualenv.mk
src/: main.rs
