[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.4", features = ["json", "stream"] }
tokio = { version = "1.37.0", features = ["full"] }
serde = "1.0.198"
serde_json = "1.0.116"
bytes = "1.6.0"
futures-util = "0.3.30"
anyhow = "1.0.82"
