[tool.poetry]
name = "ollama-shell-client"
version = "0.1.0"
description = ""
authors = ["tamakiii <tamakiii@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ollama = "^0.1.8"
langchain = "^0.1.16"
beautifulsoup4 = "^4.12.3"
chromadb = "^0.4.24"
gradio = "^4.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
